--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,7 @@ services:
             - 8080:80
         environment:
             - PMA_HOST=mysql
+            - UPLOAD_LIMIT=500M
         restart: unless-stopped
 volumes:
     mysqldata: {}
